--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -1,5 +1,36 @@
-.categories-container {
+.categories {
   display: flex;
-  background-color: grey;
-  height: 100px;
+  flex-direction: column;
+  background-color: black;
+  height: 350px;
+}
+
+.category-title > h3 {
+  margin-left: 10px;
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.category-buttons {
+  display: flex;
+  height: 20px;
+  padding: 10px;
+}
+
+.category-buttons > button {
+  color: white;
+  background-color: rgb(85, 85, 85);
+  border: none;
+  margin-left: 10px;
+  border-radius: 0.6rem;
+}
+.category-panels {
+  display: flex;
+  overflow-x: scroll;
+  margin-top: 10px;
+  height: 300px;
+}
+.category-panels::-webkit-scrollbar {
+  display: none;
 }
