--- a/src/components/CategoryPoster.css
+++ b/src/components/CategoryPoster.css
@@ -4,10 +4,14 @@
   margin: 10px;
 
   border-radius: 0.2vw;
-  width: 100%;
+  width: auto;
   transition: transform 450ms;
 }
 
 .category-poster:hover {
   transform: scale(1.1);
+}
+
+.category-poster-link {
+  /* width: 200px; */
 }
