--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@ body {
   color: #ffff;
   background-color: #0b0b0b;
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 25px;
 
   margin: 0 auto;
-  max-width: 780px;
+  max-width: 1280px;
 }
 
 h1,
@@ -39,6 +39,7 @@ button {
 }
 
 .basic-btn {
+  font-size: 1.2rem;
   margin-top: 10px;
   margin-right: 15px;
   padding: 8px 15px;
