--- a/src/components/FeatureMovie.css
+++ b/src/components/FeatureMovie.css
@@ -47,3 +47,9 @@
 .feature-wrapper-button {
   padding-bottom: 45px;
 }
+
+#genre {
+  font-weight: normal;
+  font-style: italic;
+  font-size: 1.5rem;
+}
