--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,5 @@
 footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-color: #3586ff;
   color: white;
   text-align: center;
@@ -26,7 +24,7 @@ footer {
   background: #333;
   justify-content: flex-end;
   align-items: flex-end;
-  min-height: 100vh;
+  height: 20vh;
 
   /* background-color: cadetblue; */
 }
@@ -64,7 +62,6 @@ footer {
   list-style: none;
   padding-left: 50px;
   transition: 0.5s;
-  /* width: 0px; */
 }
 
 #description {
