--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,13 +2,13 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #3586ff;
+  /* background-color: black; */
   color: white;
   text-align: center;
   height: 300px;
   padding: 20px;
   border-radius: 5px;
-  animation: animateBackground 5s linear infinite;
+  /* animation: animateBackground 5s linear infinite; */
 
   /* width: 100%;
   background: #3586ff;
@@ -23,7 +23,6 @@ footer {
 
 .footer-container {
   display: flex;
-  background: #333;
   justify-content: flex-end;
   align-items: flex-end;
   min-height: 100vh;
@@ -34,6 +33,7 @@ footer {
 .column {
   width: 100%;
   height: 35%;
+  font-size: 1.2rem;
 }
 
 #titleIcon {
@@ -70,6 +70,7 @@ footer {
 #description {
   width: 98%;
   margin-top: 40px;
+  font-size: 1.2rem;
 }
 
 .social-icon__item:hover {
@@ -80,20 +81,20 @@ a.social-icon__link {
   color: #ffffff;
 }
 
-@keyframes animateBackground {
+/* @keyframes animateBackground {
   0% {
-    background-color: rgb(100, 199, 206);
+    background-color: #bebebe;
   }
   25% {
-    background-color: cadetblue;
+    background-color: #949494;
   }
   50% {
-    background-color: darkcyan;
+    background-color: #808080;
   }
   75% {
-    background-color: rgb(25, 145, 201);
+    background-color: #949494;
   }
   100% {
-    background-color: rgb(3, 120, 199);
+    background-color: r#bebebe;
   }
-}
+} */
