--- a/src/components/CategoryPoster.css
+++ b/src/components/CategoryPoster.css
@@ -1,7 +1,7 @@
 .category-poster {
-  height: 250px;
+  height: 16em;
   object-fit: contain;
-  margin: 10px;
+  margin: 0.5em;
 
   border-radius: 0.2vw;
   width: auto;
