--- a/src/pages/MoviePage.css
+++ b/src/pages/MoviePage.css
@@ -1,4 +1,51 @@
-img {
-  width: 100%;
-  height: 100%;
+.backdrop {
+  width: 530px;
+  height: 530px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 25px;
+  /* opacity: 65%; */
+  box-shadow: 20px 20px 26px #080808, -20px -20px 26px #0e0e0e;
+  margin-top: 150px;
+  margin-left: -200px;
+}
+
+.title {
+  color: whitesmoke;
+  font-family: serif;
+  position: relative;
+  left: 400px;
+  margin-top: -530px;
+  font-size: 50px;
+}
+
+.overview {
+  position: relative;
+  left: 400px;
+  margin-top: 40px;
+  width: 70%;
+  font-family: Lucida Handwriting;
+}
+
+.vote_average {
+  left: 400px;
+  position: relative;
+  margin-top: 25px;
+  border-radius: 50%;
+  width: 38px;
+  height: 33px;
+  padding: 10px;
+
+  background: yellow;
+  border: 2px solid red;
+  color: black;
+
+  font: 27px Arial, sans-serif;
+}
+
+.user_score {
+  left: 480px;
+  position: relative;
+  margin-top: -45px;
 }
