--- a/src/components/FeatureMovie.css
+++ b/src/components/FeatureMovie.css
@@ -7,8 +7,10 @@
 }
 
 .feature-poster {
-  width: 60em;
-  height: 33.75em;
+  /* width: 60em;
+  height: 33.75em; */
+  height: 100vh;
+  width: auto;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
