--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -1,19 +1,23 @@
-.categories {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.category-buttons {
-  display: flex;
-  padding-bottom: 1em;
-}
-
-.category-panels {
+.row-panels {
   display: flex;
   overflow-x: scroll;
   height: 20em;
+  width: 100%;
 }
-.category-panels::-webkit-scrollbar {
+.row-panels::-webkit-scrollbar {
   display: none;
+}
+
+/* mobile */
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .header {
+    font-size: 1.5rem;
+  }
+}
+
+/* Desktops, Large Screens ----------- */
+@media only screen and (min-width: 481px) and (max-width: 720px) {
+  .header {
+    font-size: 2rem;
+  }
 }
