--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,13 @@ button {
   background-color: #000;
 }
 
+.big-btn {
+  font-size: 1em;
+  padding: 0.75em 1.3em;
+  border: 2px solid #fff;
+  border-radius: 25px;
+}
+
 #active-btn {
   background-color: #21d4fd;
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
