--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,7 +4,7 @@ footer {
   background-color: #0b0b0b;
   color: white;
   text-align: center;
-  height: 300px;
+  min-height: 300px;
   padding: 20px;
   border-radius: 5px;
 
@@ -117,13 +117,14 @@ a.social-icon__link:hover {
 @media only screen and (max-width: 500px) {
   /* For mobile phones: */
   footer {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
   }
   #description {
-    width: 97%;
+    /* width: 97%;
+    height: 20vh; */
   }
   #copyright {
-    width: 100vw;
+    /* width: 100vw; */
   }
 }
