--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   background-color: #0b0b0b;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
+  overflow-x: hidden;
 }
 
 h1,
@@ -31,24 +32,21 @@ button {
 /* Consistent Classes */
 
 .main-container {
-  /* margin: 0 auto;
-  width: 100%; */
-  padding-left: 30px;
-  padding-right: 30px;
+  margin: 0 auto;
+  max-width: 95vw;
+  overflow-x: hidden;
 }
 
 .header {
-  font-size: 3rem;
-  /* margin: 0.5em 0; */
+  font-size: 3.5vw;
 }
 
 .basic-btn {
-  font-size: 1.2rem;
+  font-size: 1.2vw;
   margin-top: 0.65em;
   margin-right: 1em;
-  padding: 0.65em 1.25em;
+  padding: 0.5em 1.2em;
   border: 2px solid #fff;
-  border-radius: 25px;
   background-color: #000;
 }
 
@@ -56,10 +54,37 @@ button {
   font-size: 1em;
   padding: 0.75em 1.3em;
   border: 2px solid #fff;
-  border-radius: 25px;
 }
 
 #active-btn {
   background-color: #21d4fd;
   background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+}
+
+.feature-poster {
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 425px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-container {
+    overflow-x: hidden;
+  }
+
+  .header {
+    font-size: 3vw;
+  }
+
+  .basic-btn {
+    font-size: 0.75em;
+  }
 }
