--- a/src/pages/MoviePage.css
+++ b/src/pages/MoviePage.css
@@ -1,19 +1,9 @@
-/* .backdrop {
-  width: 530px;
-  height: 530px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 25px;
-  box-shadow: 20px 20px 26px #080808, -20px -20px 26px #0e0e0e;
-  margin-top: 150px;
-  left: 4rem;
-  position: relative;
-} */
-
-.mp-wrapper {
-  display: grid;
-  grid-template-columns: minmax(10em, 25%) 1fr;
+.mp-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150vh;
+  padding: 1em 4em;
 }
 
 .mp-poster {
@@ -22,10 +12,9 @@
   border: 2px solid #fff;
 }
 
-.mp-wrapper-poster,
-.mp-wrapper-info {
-  padding: 2em;
-  margin-top: 10em;
+.mp-movie-detail,
+.mp-movie-genre {
+  font-size: 1.8vw;
 }
 
 .mp-movie-detail {
@@ -38,69 +27,56 @@
 
 #mp-genre {
   margin-right: 1em;
-  font-size: 1.2em;
+  font-weight: normal;
+  font-style: italic;
 }
 
 .mp-wrapper-detail {
   margin: 0.5em 0em;
 }
 
+.mp-wrapper-overview {
+  width: 95%;
+  margin: 1.5em 0;
+}
+
 .mp-overview {
-  line-height: 1.8em;
+  font-size: 1.5vw;
+  letter-spacing: 1.5px;
+  line-height: 2em;
 }
 
-.mp-wrapper-btn {
-  margin: 2em 0em;
+@media screen and (max-width: 768px) {
+  .mp-container {
+    height: auto;
+    padding: 0em;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .mp-wrapper-info {
+    padding: 0.2em;
+  }
+
+  .mp-header {
+    font-size: 2em;
+  }
+
+  .mp-movie-detail,
+  .mp-movie-genre {
+    font-size: 1em;
+  }
+
+  .mp-wrapper-overview {
+    width: 100%;
+    margin: 1.5em 0;
+  }
+
+  .mp-overview {
+    font-size: 1em;
+  }
+
+  .mp-btn {
+    width: 100%;
+  }
 }
-
-.mp-wrapper-description {
-  font-size: 1em;
-}
-
-/* .title {
-  position: relative;
-  left: 40rem;
-  margin-top: -530px;
-}
-
-.overview {
-  position: relative;
-  left: 40rem;
-  margin-top: 40px;
-  width: 50%;
-  font-family: Lucida Handwriting;
-}
-
-.vote_average {
-  left: 40rem;
-  position: relative;
-  margin-top: 25px;
-  border-radius: 50%;
-  width: 38px;
-  height: 33px;
-  padding: 10px;
-
-  background: yellow;
-  border: 2px solid red;
-  color: black;
-
-  font: 27px Arial, sans-serif;
-}
-
-.user_score {
-  left: 45rem;
-  position: relative;
-  margin-top: -47px;
-}
-
-.release_date {
-  left: 60rem;
-  position: relative;
-  margin-top: -37px;
-}
-
-.runtime {
-  left: 70rem;
-  position: relative;
-  margin-top: -39px;
-} */
