--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -70,7 +70,9 @@ footer {
   transition: 0.5s;
 }
 .lastSocialIcon {
-  padding-right: 0px;
+  padding-right: 50px;
+  transition: 0.5s;
+  list-style: none;
 }
 
 #description {
@@ -120,7 +122,7 @@ a.social-icon__link:hover {
   footer {
     /* width: 100vw;
     height: 100vh;  */
-    /* font-size: 4.5vw; */
+    font-size: 4vw;
   }
   #description {
     /* width: 97%;
@@ -128,5 +130,13 @@ a.social-icon__link:hover {
   }
   #copyright {
     /* width: 100vw; */
+  }
+  .social-icon__item {
+    padding-right: 50px;
+  }
+  .lastSocialIcon {
+    padding-right: 0px;
+    transition: 0.5s;
+    list-style: none;
   }
 }
