--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,7 +8,7 @@ footer {
   padding: 20px;
   border-radius: 5px;
 
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 
   /* width: 100%;
   background: #3586ff;
@@ -70,7 +70,9 @@ footer {
   transition: 0.5s;
 }
 .lastSocialIcon {
-  padding-right: 0px;
+  padding-right: 50px;
+  transition: 0.5s;
+  list-style: none;
 }
 
 #description {
@@ -79,6 +81,7 @@ footer {
   width: 97%;
   margin-top: 40px;
   quotes: "'" "'";
+  margin-bottom: 25px;
 }
 #copyright {
   color: #aaaaaa;
@@ -118,7 +121,8 @@ a.social-icon__link:hover {
   /* For mobile phones: */
   footer {
     /* width: 100vw;
-    height: 100vh; */
+    height: 100vh;  */
+    font-size: 4vw;
   }
   #description {
     /* width: 97%;
@@ -126,5 +130,13 @@ a.social-icon__link:hover {
   }
   #copyright {
     /* width: 100vw; */
+  }
+  .social-icon__item {
+    padding-right: 50px;
+  }
+  .lastSocialIcon {
+    padding-right: 0px;
+    transition: 0.5s;
+    list-style: none;
   }
 }
