--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ button {
 }
 
 .header {
-  font-size: 3.5vw;
+  font-size: 2.5em;
 }
 
 .basic-btn {
@@ -81,7 +81,7 @@ button {
   }
 
   .header {
-    font-size: 3vw;
+    font-size: 2em;
   }
 
   .basic-btn {
