--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,4 @@
 footer {
-  /* width: 1280px; */
-
   background-color: #0b0b0b;
   color: white;
   text-align: center;
@@ -55,13 +53,8 @@ footer {
 
 .social-icon {
   display: flex;
-  position: relative;
-  display: flex;
+  justify-content: center;
   align-items: center;
-  /* justify-content: center;
-  flex-wrap: wrap;
-  margin-right: 10px;
-  flex-wrap: wrap; */
 }
 
 .social-icon__item {
