--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   color: #ffff;
-  background-color: #0b0b0b;
+  background-color: #000;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   overflow-x: hidden;
