--- a/src/pages/ProfilePage.css
+++ b/src/pages/ProfilePage.css
@@ -16,6 +16,7 @@ button {
 .profile-wrapper {
   display: grid;
   justify-content: center;
+  margin-top: 100px;
 }
 .profile-wrapper-bg {
   width: 100%;
